--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.1.2",
     "@mui/x-date-pickers": "^8.5.3",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "next": "15.3.4",
     "react": "^19.0.0",
